trying to fix top margin on .list-is-visible

--- a/client/src/components/BookList.css
+++ b/client/src/components/BookList.css
@@ -38,7 +38,7 @@
 }
 
 .list-is-visible {
-  margin-top: 100vh;
+  margin-top: 100px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 992px) {
